tests/ui/fail-noname.stderr
error: no name specified
 --> $DIR/fail-noname.rs:1:1
  |
1 | #[lazylink::lazylink]
  | ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
